--- a/triton-core/pom.xml
+++ b/triton-core/pom.xml
@@ -100,6 +100,11 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>net.java.dev.javacc</groupId>
 			<artifactId>javacc</artifactId>
 			<version>5.0</version>
@@ -129,12 +134,12 @@
 				<version>2.6</version>
 				<executions>
 					<execution>
-					<id>jjtree-javacc</id>
-					<goals>
-					<goal>jjtree-javacc</goal>
-					</goals>
-					<configuration>
-					</configuration>
+						<id>jjtree-javacc</id>
+						<goals>
+							<goal>jjtree-javacc</goal>
+						</goals>
+						<configuration>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
