implement process start/stop

--- a/triton-core/pom.xml
+++ b/triton-core/pom.xml
@@ -133,14 +133,14 @@
 				<artifactId>javacc-maven-plugin</artifactId>
 				<version>2.6</version>
 				<executions>
-					<execution>
-						<id>jjtree-javacc</id>
-						<goals>
-							<goal>jjtree-javacc</goal>
-						</goals>
-						<configuration>
-						</configuration>
-					</execution>
+					<!-- <execution> -->
+					<!-- 	<id>jjtree-javacc</id> -->
+					<!-- 	<goals> -->
+					<!-- 		<goal>jjtree-javacc</goal> -->
+					<!-- 	</goals> -->
+					<!-- 	<configuration> -->
+					<!-- 	</configuration> -->
+					<!-- </execution> -->
 				</executions>
 			</plugin>
 		</plugins>
